--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -1,5 +1,9 @@
-body
-{
+body {
     font-family: 'Roboto', sans-serif;
     font-size: 1.5rem;
+}
+
+a {
+    text-decoration: none;
+    color: black;
 }
