--- a/src/main.scss
+++ b/src/main.scss
@@ -1,4 +1,10 @@
+// base
+@import "./base/base.scss";
 @import "./base/typography.scss";
 
 // layouts
 @import "./layouts/header.scss";
+@import "./layouts/hero.scss";
+
+// components
+@import "./components/buttons.scss";
