feat: styling "fonctionnement" section Stylisation de la section "Fonctionnement".

--- a/src/main.scss
+++ b/src/main.scss
@@ -5,6 +5,8 @@
 // layouts
 @import "./layouts/header.scss";
 @import "./layouts/hero.scss";
+@import "./layouts/fonctionnement.scss";
 
 // components
 @import "./components/buttons.scss";
+@import "./components/icons.scss";
