feat: styling "restaurants" section Stylisation de la section "Restaurants".

--- a/src/main.scss
+++ b/src/main.scss
@@ -6,6 +6,7 @@
 @import "./layouts/header.scss";
 @import "./layouts/hero.scss";
 @import "./layouts/fonctionnement.scss";
+@import "./layouts/restaurants.scss";
 
 // components
 @import "./components/buttons.scss";
