feat: styling footer section Stylisation du footer.

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,7 +7,9 @@
 @import "./layouts/hero.scss";
 @import "./layouts/fonctionnement.scss";
 @import "./layouts/restaurants.scss";
+@import "./layouts/footer.scss";
 
 // components
 @import "./components/buttons.scss";
 @import "./components/icons.scss";
+@import "./components/logo.scss";
