feat: refactoring code - Ajout de variables - Ajout de mixins pour changer la couleur du texte et du logo en fonction de la couleur du fond. - Correction des erreurs indiquées par le validateur du W3C.

--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -2,6 +2,6 @@
     border-radius: 25px;
     height: 40px;
     padding: 0 15px;
-    background: linear-gradient(#ef74da, #a85ddc);
+    background: linear-gradient($secondary-color, $primary-color);
     color: white;
 }
