--- a/src/layouts/_hero.scss
+++ b/src/layouts/_hero.scss
@@ -13,7 +13,7 @@
 }
 
 .cta {
-    background-color: #f6f6f6;
+    background-color: $section-background-color-light;
     margin-top: 0;
     padding-top: 50px;
     padding-bottom: 50px;
