--- a/src/layouts/_restaurants.scss
+++ b/src/layouts/_restaurants.scss
@@ -1,7 +1,7 @@
 /* Restaurants section */
 
 .restaurants {
-    background-color: #f6f6f6;
+    background-color: $section-background-color-light;
     padding: 50px 15px;
 }
 
