feat: improve file structure and styling menu - Dossier "dist" renommé "public". - Création et compression des images en différentes tailles. - Modification du h1. - Modification de l'organisation des variables et de leurs noms. - Stylisation des pages de menu.

--- a/src/layouts/_footer.scss
+++ b/src/layouts/_footer.scss
@@ -1,8 +1,8 @@
 /* Footer section */
 
 footer {
-    @include background-text-color($gris-fonce);
-    @include background-logo-color($gris-fonce);
+    @include background-text-color($section-background-color-dark);
+    @include background-logo-color($section-background-color-dark);
     padding: 25px 0;
 }
 
