--- a/src/main.scss
+++ b/src/main.scss
@@ -16,3 +16,8 @@
 // components
 @import "./components/buttons.scss";
 @import "./components/icons.scss";
+@import "./components/banner.scss";
+@import "./components/menu-item";
+
+// pages
+@import "./pages/menus";
