--- a/public/style/main.css
+++ b/public/style/main.css
@@ -21,10 +21,6 @@ header {
   text-align: center;
 }
 
-h1 {
-  font-family: "Shrikhand", cursive;
-}
-
 /* Hero section */
 .hero {
   text-align: center;
@@ -91,6 +87,7 @@ h1 {
 }
 
 .restaurants__item {
+  width: 100%;
   position: relative;
   border-radius: 10px;
   background-color: white;
@@ -103,7 +100,7 @@ h1 {
 .restaurant__img {
   border-radius: 10px 10px 0 0;
   object-fit: cover;
-  width: 300px;
+  width: 100%;
   height: 200px;
 }
 
@@ -153,6 +150,41 @@ footer ul {
 
 .handshake {
   width: 15px;
+}
+
+.banner {
+  position: relative;
+  background-image: url("/public/images/restaurants/large/a-la-francaise.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 400px;
+  width: 100%;
+}
+
+.banner::after {
+  content: "";
+  border-top-left-radius: 50% 100%;
+  border-top-right-radius: 50% 100%;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  background: #f6f6f6;
+  height: 20%;
+}
+
+.entrees__item, .plats__item, .desserts__item {
+  background-color: white;
+  border-radius: 15px;
+}
+
+.menu {
+  background-color: #f6f6f6;
+  padding: 0 15px;
+}
+
+.menu h1 {
+  margin-top: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
