--- a/src/layouts/_restaurants.scss
+++ b/src/layouts/_restaurants.scss
@@ -13,6 +13,7 @@
 }
 
 .restaurants__item {
+    width: 100%;
     position: relative;
     border-radius: 10px;
     background-color: white;
@@ -25,7 +26,7 @@
 .restaurant__img {
     border-radius: 10px 10px 0 0;
     object-fit: cover;
-    width: 300px;
+    width: 100%;
     height: 200px;
 }
 
