--- a/src/utils/_variables.scss
+++ b/src/utils/_variables.scss
@@ -1,15 +1,7 @@
 // Color variables
-$violet: #9356DC;
-$rose: #FF79DA;
-$bleu: #99E2D0;
-$gris-clair: #f6f6f6;
-$gris-fonce: #353535;
+$primary-color: #9356DC;
+$secondary-color: #FF79DA;
+$tertiary-color: #99E2D0;
 
-
-// Color configs
-$primary-color: $violet;
-$secondary-color: $rose;
-$tertiary-color: $bleu;
-
-$section-background-color-light: $gris-clair;
-$section-background-color-dark: $gris-fonce;
+$section-background-color-light: #f6f6f6;
+$section-background-color-dark: #353535;
