--- a/src/components/_banner.scss
+++ b/src/components/_banner.scss
@@ -18,3 +18,5 @@
     background: $section-background-color-light;
     height: 20%;
   }
+
+  // TO DO : Set different size according to screen size.
