--- a/src/layouts/_restaurants.scss
+++ b/src/layouts/_restaurants.scss
@@ -30,10 +30,7 @@
     height: 200px;
 }
 
-.restaurants__item figcaption {
-    display: flex;
-    justify-content: space-around;
-}
+
 
 /* Nouveauté restaurant */
 
@@ -46,4 +43,15 @@
     right: 5px;
     color: white;
     background-color: green;
+}
+
+/* Heart position */
+.restaurants__favourite {
+    position: relative;
+}
+
+.fa-heart-o {
+    position: absolute;
+    right: 20px;
+    bottom: 50px;
 }
