--- a/src/main.scss
+++ b/src/main.scss
@@ -18,6 +18,7 @@
 @import "./components/icons.scss";
 @import "./components/banner.scss";
 @import "./components/menu-item";
+@import "./components/heart";
 
 // pages
 @import "./pages/menus";
