--- a/src/layouts/_restaurants.scss
+++ b/src/layouts/_restaurants.scss
@@ -46,12 +46,9 @@
 }
 
 /* Heart position */
-.restaurants__favourite {
-    position: relative;
-}
 
-.fa-heart-o {
+.heart {
     position: absolute;
-    right: 20px;
-    bottom: 50px;
+    right: 50px;
+    bottom: 75px;
 }
