--- a/public/style/main.css
+++ b/public/style/main.css
@@ -117,14 +117,10 @@ header {
 }
 
 /* Heart position */
-.restaurants__favourite {
-  position: relative;
-}
-
-.fa-heart-o {
+.heart {
   position: absolute;
-  right: 20px;
-  bottom: 50px;
+  right: 50px;
+  bottom: 75px;
 }
 
 /* Footer section */
@@ -184,11 +180,29 @@ footer ul {
   border-radius: 15px;
 }
 
-.fa-heart-o:hover::before {
+.restaurants__favourite input {
+  display: none;
+}
+
+.heart::before {
+  content: "\f08a";
+  position: absolute;
+  font-size: 2.2rem;
+  font-family: "FontAwesome";
+  transition: 0.2s ease-in-out;
+}
+
+.heart:hover::before {
+  color: #FF79DA;
+}
+
+input:checked + .heart::before {
   content: "\f004";
   background: linear-gradient(red, blue);
   background-clip: text;
   color: transparent;
+  font-family: "FontAwesome";
+  transform: scale(1.3);
 }
 
 .menu {
