feat: animations on menu pages - Ajout d'une animation au survol des items de menu sur la page du restaurant "À la française".

--- a/src/main.scss
+++ b/src/main.scss
@@ -19,6 +19,7 @@
 @import "./components/banner.scss";
 @import "./components/menu-item";
 @import "./components/heart";
+@import "./components/plate-selection-animation";
 
 // pages
 @import "./pages/menus";
