--- a/public/style/main.css
+++ b/public/style/main.css
@@ -205,6 +205,56 @@ input:checked + .heart::before {
   transform: scale(1.3);
 }
 
+/* Initial state */
+.menu__item {
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu__text {
+  flex: 1;
+  min-width: 0;
+}
+
+.menu__text h2, .menu__text p {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.menu__selection {
+  display: flex;
+}
+
+.menu__check {
+  width: 0;
+  height: 100%;
+  background-color: #99E2D0;
+  transition: 0.4s;
+}
+
+.menu__check::before {
+  content: "\f058";
+  font-size: 2.5rem;
+  display: inline-block;
+  position: relative;
+  left: 30px;
+  top: 30px;
+  color: white;
+  font-family: "FontAwesome";
+  transition: transform 0.4s ease-in-out;
+}
+
+/* Animation state */
+.menu__item:hover .menu__check {
+  width: 100px;
+}
+
+.menu__item:hover .menu__check::before {
+  transform: rotate(360deg);
+}
+
 .menu {
   background-color: #f6f6f6;
   padding: 0 15px;
@@ -212,6 +262,10 @@ input:checked + .heart::before {
 
 .menu h1 {
   margin-top: 0;
+}
+
+.menu__item {
+  margin-top: 15px;
 }
 
 /*# sourceMappingURL=main.css.map */
