feat: styling menu pages - Specific image banner on menu pages. - Titles on menu pages. - Menu item hover animations on every menu mages. - Heart animation on every menu page. - Return link icon on menu pages.

--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -9,4 +9,12 @@ a {
 
 // Menu pages typography
 
+.menu h2::after {
+    content: "";
+    display: block;
+    width: 70px;
+    height: 5px;
+    background: $tertiary-color;
+}
+
 // majuscule...
