--- a/src/components/_heart.scss
+++ b/src/components/_heart.scss
@@ -1,5 +1,6 @@
 // Cache la checkbox d'origine
-.restaurants__favourite input {
+.restaurants__favourite input,
+.menu__favourite input {
     display: none;
 }
 
