--- a/public/style/main.css
+++ b/public/style/main.css
@@ -16,6 +16,14 @@ a {
   color: black;
 }
 
+.menu h2::after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 5px;
+  background: #99E2D0;
+}
+
 /* Header section */
 header {
   text-align: center;
@@ -117,10 +125,17 @@ header {
 }
 
 /* Heart position */
-.heart {
+.restaurants__heart {
   position: absolute;
   right: 50px;
   bottom: 75px;
+}
+
+/* Button position */
+.menu__btn-validatation {
+  display: flex;
+  justify-content: center;
+  padding: 25px 0 50px 0;
 }
 
 /* Footer section */
@@ -156,7 +171,6 @@ footer ul {
 
 .banner {
   position: relative;
-  background-image: url("/public/images/restaurants/large/a-la-francaise.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -175,12 +189,29 @@ footer ul {
   height: 20%;
 }
 
+.banner-note-enchantee {
+  background-image: url("/public/images/restaurants/large/la-note-enchantee.jpg");
+}
+
+.banner-a-la-francaise {
+  background-image: url("/public/images/restaurants/large/a-la-francaise.jpg");
+}
+
+.banner-la-palette-du-gout {
+  background-image: url("/public/images/restaurants/large/palette-du-gout.jpg");
+}
+
+.banner-le-delice-des-sens {
+  background-image: url("/public/images/restaurants/large/le-delice-des-sens.jpg");
+}
+
 .entrees__item, .plats__item, .desserts__item {
   background-color: white;
   border-radius: 15px;
 }
 
-.restaurants__favourite input {
+.restaurants__favourite input,
+.menu__favourite input {
   display: none;
 }
 
@@ -253,6 +284,26 @@ input:checked + .heart::before {
 
 .menu__item:hover .menu__check::before {
   transform: rotate(360deg);
+}
+
+.menu-header {
+  padding: 25px 0 15px 0;
+}
+
+.return-index {
+  position: absolute;
+  left: 15px;
+  font-size: 25px;
+}
+
+.menu__head {
+  display: flex;
+  justify-content: space-between;
+}
+
+.menu__heart {
+  position: relative;
+  right: 50px;
 }
 
 .menu {
