--- a/src/pages/_menus.scss
+++ b/src/pages/_menus.scss
@@ -1,3 +1,24 @@
+// Header
+.menu-header {
+    padding: 25px 0 15px 0;
+}
+
+.return-index {
+    position: absolute;
+    left: 15px;
+    font-size: 25px;
+}
+
+.menu__head {
+    display: flex;
+    justify-content: space-between;
+}
+
+.menu__heart {
+    position: relative;
+    right: 50px;
+}
+
 .menu {
     background-color: $section-background-color-light;
     padding: 0 15px;
