--- a/src/layouts/_restaurants.scss
+++ b/src/layouts/_restaurants.scss
@@ -10,6 +10,9 @@
     align-items: center;
     flex-direction: column;
     gap: 25px;
+    @include tablet-screens {
+        flex-direction: row;
+    }
 }
 
 .restaurants__item {
