--- a/src/main.scss
+++ b/src/main.scss
@@ -20,6 +20,8 @@
 @import "./components/menu-item";
 @import "./components/heart";
 @import "./components/plate-selection-animation";
+@import "./components/plate-appearing-animation";
+@import "./components/loading-spinner";
 
 // pages
 @import "./pages/menus";
