--- a/src/layouts/_fonctionnement.scss
+++ b/src/layouts/_fonctionnement.scss
@@ -13,6 +13,7 @@
     align-items: center;
     margin-top: 25px;
     padding-left: 15px;
+    padding-right: 15px;
     background-color: $section-background-color-light;
     box-shadow: 3px 3px 5px rgb(148, 148, 148), -3px 3px 5px rgb(148, 148, 148);
     height: 45px;
