--- a/src/layouts/_footer.scss
+++ b/src/layouts/_footer.scss
@@ -11,6 +11,9 @@ footer {
 
 footer a {
     @include background-text-color($section-background-color-dark);
+    &:hover {
+        border-bottom: 1px solid $tertiary-color;
+    }
 }
 
 footer ul {
