--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -1,7 +1,7 @@
 .btn {
+    vertical-align: middle;
     border-radius: 25px;
-    height: 40px;
-    padding: 0 15px;
+    padding: 15px 15px;
     background: linear-gradient($secondary-color, $primary-color);
     color: white;
 }
