--- a/src/main.scss
+++ b/src/main.scss
@@ -14,6 +14,7 @@
 @import "./layouts/footer.scss";
 
 // components
+@import "./components/restaurant-cards";
 @import "./components/buttons.scss";
 @import "./components/icons.scss";
 @import "./components/banner.scss";
