--- a/src/base/_typography.scss
+++ b/src/base/_typography.scss
@@ -19,6 +19,10 @@ a {
 
 /* Menu pages typography */
 
+.menu h1 {
+    font-family: 'Shrikhand', cursive;
+}
+
 .menu h2::after {
     content: "";
     display: block;
