--- a/src/components/_buttons.scss
+++ b/src/components/_buttons.scss
@@ -1,7 +1,19 @@
+button {
+    cursor: pointer;
+    border: none;
+    width: 250px;
+    font-size: 1.2rem;
+}
+
 .btn {
     vertical-align: middle;
     border-radius: 25px;
     padding: 15px 15px;
     background: linear-gradient($secondary-color, $primary-color);
     color: white;
+    @include shadow-border;
+    &:hover {
+        opacity: 0.85;
+        box-shadow: 3px 3px 5px rgb(116, 116, 116), -3px 3px 5px rgb(116, 116, 116);
+    }
 }
